--- a/toys/templates/toys/dashboard.html
+++ b/toys/templates/toys/dashboard.html
@@ -1,3 +1,6 @@
+
+{% extends  'toys\base.html' %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,11 +8,12 @@
     <title>myFirstWebSite</title>
 </head>
 <body>
+    {% block content %}
     <div class="container">
         <h1 align="center">Welcome to my first project!</h1>
         <h2>All users</h2>
         {% for user in users %}
-        <p>{{ user.firtname }} &nbsp {{ user.lastname }}</p>
+        <p>{{ user.firstname }} &nbsp {{ user.lastname }}</p>
         {% endfor %}
 
         <h2>All toys</h2>
@@ -19,6 +23,6 @@
 
     </div>
 
-
+    {% endblock %}
 </body>
 </html>
