--- a/markets/templates/markets/base.html
+++ b/markets/templates/markets/base.html
@@ -4,23 +4,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        a{
+            text-decoration: none;
+        }
+
+    </style>
 </head>
 <body>
-    <div class="container" style="margin-top:2ch;margin-left: 2ch">
+    <div class="container" style="margin-left: 1ch">
         <nav>
 
             <a href="{% url 'index' %}">Markets</a>
-            {% for market in market_list %}
+            {% for market  in all.markets %}
+            <a style="margin: 1ch" href="{% url 'detail' market.pk %}">{{ market.name }}</a>
 
-                <a href="#">{{ market.name }}a</a>
-            {% endfor %}
+        {% endfor %}
+            <a href="{% url 'add' %}">AddProduct</a>
+
         </nav>
     </div>
     <br>
-    <section>
         {% block content %}
         {% endblock %}
-    </section>
+
 
 
 
