create sign up method

--- a/toys/templates/toys/base.html
+++ b/toys/templates/toys/base.html
@@ -7,18 +7,14 @@
 </head>
 <body>
 
-        <div class="" align="center">
-            <h1>My first profect</h1>
-            <form action="">
-                <input type="text">
-                <input type="text">
-                <div align="center">
-                   <button style="align-content: center">submit</button>
-                    <form action="" class="container"></form>
-                </div>
-            </form>
-        </div>
+        <nav>
+            <div class="container-fluid"  >
+                <a style="text-decoration: none" href="{% url 'login' %}">Login</a>
+                <a style="text-decoration: none" href="{% url 'register' %}">Register</a>
+            </div>
 
+
+        </nav>
 
 
 
