create add employee

--- a/toys/templates/toys/base.html
+++ b/toys/templates/toys/base.html
@@ -11,6 +11,8 @@
             <div class="container-fluid"  >
                 <a style="text-decoration: none" href="{% url 'login' %}">Login</a>
                 <a style="text-decoration: none" href="{% url 'register' %}">Register</a>
+                <a style="text-decoration: none" href="{% url 'employees' %}">Employees</a>
+
             </div>
 
 
