--- a/toys/templates/toys/sign_up.html
+++ b/toys/templates/toys/sign_up.html
@@ -16,5 +16,11 @@
             <input type="submit" value="Save">
 
         </form>
+
+        {% for message in messages %}
+            <h3>{{ message }}</h3>
+
+        {% endfor %}
+
     </div>
 {% endblock %}
